--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ loader_version=0.18.4
 loom_version=1.14-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.0
+mod_version=0.1.0-ALPHA
 maven_group=net.ghostyy
-archives_base_name=the-skylands
+archives_base_name=skylands
 
 # Dependencies
 fabric_api_version=0.141.1+1.21.11
